Fix page translation overflow

--- a/web/src/app/Landing/style.scss
+++ b/web/src/app/Landing/style.scss
@@ -33,7 +33,7 @@
     #signUp {
         margin-right: 100px;
         margin-left: 100px;
-        height: 300px;
+        min-height: 300px;
         min-width: 300px;
     }
     #title {
